recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:6: error: ')' expected but '}' found.
    }
    ^PolygonFractal:12: error: ')' expected but '}' found.
    }
    ^